--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@ main:
    - title: "About"
      url: https://mmistakes.github.io/minimal-mistakes/about/
    - title: "Posts"
-     url: /post/
+     url: https://github.com/jisu1013.github.io/post/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
