--- a/_config.yml
+++ b/_config.yml
@@ -281,14 +281,14 @@ defaults:
       related: true
       
 #_pages
-- scope:
-      path: ""
-      type: pages
-    values:
-      layout: single
-      author_profile: true
-      read_time: false
-      comments: false
-      share: true
-      related: false
+#- scope:
+#      path: ""
+#      type: pages
+#    values:
+#      layout: single
+#      author_profile: true
+#      read_time: false
+#      comments: false
+#      share: true
+#      related: false
 
