--- a/_config.yml
+++ b/_config.yml
@@ -276,19 +276,19 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments:  true
       share: true
       related: true
       
-#_pages
-#- scope:
-#      path: ""
-#      type: pages
-#    values:
-#      layout: single
-#      author_profile: true
-#      read_time: false
-#      comments: false
-#      share: true
-#      related: false
+  #_pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      read_time: false
+      comments: false
+      share: true
+      related: false
 
