--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ analytics:
 # Site Author
 author:
   name             : "Jisu Rho"
-  avatar           : "/assets/keyboard.jpg"
+  avatar           : "/assets/images/fox.jpg"
   bio              : "대학원생입니다"
   location         : "Seoul"
   email            :
