--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Ego sum operarius studens"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Jisu Rho"
-description              : "대학원생입니다"
+description              : "공부 중"
 url                      : "https://jisu1013.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "jisu1013/jisu1013.github.io"
