--- a/_config.yml
+++ b/_config.yml
@@ -20,13 +20,14 @@ title                    : "Ego sum operarius studens"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Jisu Rho"
-description              : "공부 중"
+description              : "모내기 하는 중"
 url                      : "https://jisu1013.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "jisu1013/jisu1013.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : #"/assets/images/logo.PNG"
-header                   : "/assets/images/header.jpg"
+header                   : 
+                    image: /assets/images/header.jpg
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
