--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,15 @@ title                    : "Ego sum operarius studens"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Jisu Rho"
-description              : "모내기 하는 중"
+description              : "대학원생입니다"
 url                      : "https://jisu1013.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "jisu1013/jisu1013.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : #"/assets/images/logo.PNG"
-header                   : 
-                    image: /assets/images/header.jpg
+#header                   : 
+#                    image: /assets/images/header.jpg
+cover                    : "/assets/images/header.jpg"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -97,7 +98,7 @@ analytics:
 author:
   name             : "Jisu Rho"
   avatar           : "/assets/images/book.jpg"
-  bio              : "대학원생입니다"
+  bio              : "모내기 하는 중"
   location         : "Seoul"
   email            :
   links:
