--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://jisu1013.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "jisu1013/jisu1013.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/header.jpg"
+#logo                     : "/assets/images/header.jpg"
 #header                   : 
 #                    image: /assets/images/header.jpg
 #cover                    : "/assets/images/header.jpg"
