--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ teaser                   : # path of fallback teaser image, e.g. "/assets/images
 #header                   : 
 #                          image: "/assets/images/header2.jpg"
 #cover                    : "/assets/images/header2.jpg"
+picture                   : "/assets/images/header2.jpg"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
