--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ teaser                   : # path of fallback teaser image, e.g. "/assets/images
 #header                  : 
 #                        image: "/assets/images/header2.jpg"
 #cover                   : "/assets/images/header2.jpg"
-cover                    : false
-picture                  : "/assets/images/header2.jpg"
+#cover                    : false
+#picture                  : "/assets/images/header2.jpg"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -282,6 +282,7 @@ defaults:
       author_profile: true
       read_time: true
       comments:  true
+      image: /assets/images/header2.jpg
       share: true
       related: true
       
