--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,11 @@ baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "jisu1013/jisu1013.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 #logo                    : "/assets/images/header.jpg"
+header-img: /assets/images/header.jpg
 header                   : 
-                         overlay_image: /assets/images/header2.jpg
-#cover                   : "/assets/images/header2.jpg"
-#picture                  : "/assets/images/header2.jpg"
+                         overlay_image: /assets/images/header.jpg
+#cover                   : "/assets/images/header.jpg"
+#picture                  : "/assets/images/header.jpg"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
