--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ analytics:
 # Site Author
 author:
   name             : "Jisu Rho"
-  avatar           : "/assets/images/book.jpg"
+  avatar           : "/assets/images/logo.PNG"
   bio              : "모내기 하는 중"
   location         : "Seoul"
   email            :
