--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ analytics:
 author:
   name             : "Jisu Rho"
   avatar           : "/assets/images/KakaoTalk_20210501_110714834.png"
-  bio              : "GNN / Recommendation System 공부 중입니다"
+  bio              : "GNN / Recommendation System"
   location         : "Seoul"
   email            :
   links:
