--- a/_config.yml
+++ b/_config.yml
@@ -297,4 +297,11 @@ defaults:
       comments: false
       share: true
       related: false
+      
+# Math equation
+markdown: kramdown
+highlighter: rouge
+lsi: false
+excerpt_separator: "\n\n"
+incremental: false
 
